# ecom-agent

./: .dockerignore  .env.example  .gitignore  README.md  exceptions.md  package.json  phase0and1.md  pnpm-lock.yaml  pnpm-workspace.yaml  product_roadmap.md  pyproject.toml
.github/workflows/: ci.yml
apps/agents/: langgraph.json  pyproject.toml
apps/agents/fops/: demo-merchant.yaml
apps/agents/src/agents/order_exception/: __init__.py  evals.py  graph.py  llm_layer.py  state.py  subagents.py  tooling.py
apps/agents/src/agents/shared/: __init__.py  fop_evaluator.py  fop_loader.py
apps/agents/tests/: test_graph.py  test_llm_layer.py
apps/agents/tests/evals/: test_order_exception_eval_set.py
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: config.py  main.py
apps/api/src/api/agents/: __init__.py  dispatcher.py  processor.py
apps/api/src/api/auth/: __init__.py  clerk.py  tenant.py
apps/api/src/api/db/: __init__.py  models.py  repositories.py  session.py
apps/api/src/api/integrations/: __init__.py  base.py  dependencies.py  gmail.py  gorgias.py  health.py  http.py  scopes.py  shipbob.py  shipstation.py  shopify.py  stripe.py  tools.py  webhook_registry.py
apps/api/src/api/routes/: __init__.py  agent_runs.py  cases.py  evals.py  integrations.py  me.py
apps/api/src/api/security/: __init__.py  kms.py
apps/api/src/api/slack/: __init__.py
apps/api/src/api/webhooks/: __init__.py  classifier.py  customer_intent.py  dispatcher.py  enrichment.py  routes.py  security.py
apps/api/tests/: test_agent_runs.py  test_case_admin.py  test_customer_intent.py  test_gorgias_oauth.py  test_health.py  test_integration_runtime.py  test_kms.py  test_provider_install.py  test_rls_postgres.py  test_shopify_oauth.py  test_tenant_auth.py  test_webhooks.py
apps/console/: middleware.ts  package.json
apps/console/app/: page.tsx  (+3 more)
docs/: design-partner-onboarding.md  local-real-console.md  permanent-urls.md  phase0-bootstrap.md  production-deployment.md  provider-setup.md
infra/: alembic.ini  docker-compose.yml  run_migrations.sh
infra/alembic/: README.md  env.py
infra/cloudflared/: flowlabshq.dev.yml.example
infra/terraform/: README.md
scripts/: cleanup_synthetic_run.py  create_real_provider_demo.py  export_eval_corrections_to_langsmith.py  local_console_token.py  register_live_provider_webhooks.py  replay_synthetic_webhooks.py  report_synthetic_run.py  run_langsmith_eval_gate.py  seed_local_real_console.py  seed_local_synthetic_sources.py  send_local_shopify_webhook.py  synthetic_webhook_scenarios.py
(+18 files in other folders)
