[project]
name = "ecom-agent-agents"
version = "0.1.0"
description = "LangGraph agents for ecommerce operations workflows."
requires-python = ">=3.12"
dependencies = [
  "ecom-shared-schemas",
  "langchain-anthropic>=0.3.23",
  "langgraph>=1.0.4",
  "langgraph-cli[inmem]>=0.4.7",
  "langsmith>=0.4.59",
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

