[project]
name = "ecom-agent-api"
version = "0.1.0"
description = "FastAPI surface for webhooks, REST APIs, and console integration."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.2",
  "asyncpg>=0.31.0",
  "cryptography>=46.0.7",
  "ecom-shared-schemas",
  "fastapi[standard]>=0.124.0",
  "httpx>=0.28.1",
  "langchain-core>=1.2.0",
  "langgraph-sdk>=0.3.0",
  "psycopg[binary]>=3.2.14",
  "pyjwt[crypto]>=2.12.1",
  "pydantic-settings>=2.12.0",
  "sqlalchemy[asyncio]>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
